styles/layout-main.css
@font-face {
  font-family: "IBM Plex Sans";
  src: url("/assets/fonts/IBMPlexSans-VariableFont_wdth,wght.woff2") format('woff2');
  font-weight: 100 900;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "IBM Plex Sans";
  src: url("/assets/fonts/IBMPlexSans-Italic-VariableFont_wdth,wght.woff2") format('woff2');
  font-weight: 100 900;
  font-style: italic;
  font-display: swap;
}

body {
  background-color: var(--mdf-color-background-default);
  padding: 1rem;
  min-height: 100vh;
  font-family: "IBM Plex Sans", "system-ui", "Arial";
  line-height: 1.6rem;
  display: flex;
  flex-direction: column;
}

main {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.title {
  font-size: 2rem;
  line-height: 2rem;
  margin: 1rem 0;
  text-align: center;

  a {
    color: inherit;
    text-decoration: none;

    &:visited {
      color: inherit;
    }

    &:focus-visible {
      outline: 2px solid var(--mdf-color-outline-default);
      outline-offset: 3px;
      border-radius: 8px;
    }
  }
}

.page-title {
  line-height: 3rem;
}

.content {
  max-width: 600px;
  margin: 0 auto;
}

.header {
  margin: 0 0 2rem 0;
}

.footer {
  margin-top: 3rem;
  line-height: 1.8rem;
  text-align: right;
}

.blog-post-list {
  display: flex;
  flex-direction: column;
  margin: 1rem 0 2rem 0;

  .blog-post-list-item:last-child {
    .blog-post-list-item-link:hover {
      border-bottom: 1px solid var(--mdf-color-border-muted);
    }
  }

  .blog-post-list-item-link {
    padding: 1.5rem 10px;
    font-size: 1.5rem;
    color: inherit;
    text-decoration: none;
    display: block;
    border-radius: 0px;
    border: 1px solid transparent;
    border-top: 1px solid var(--mdf-color-border-muted);

    .blog-post-list-item-date {
      font-size: 1rem;
      margin-top: 5px;
    }

    &:hover {
      background-color: var(--mdf-color-background-muted);
      border-left: 1px solid var(--mdf-color-border-muted);
      border-right: 1px solid var(--mdf-color-border-muted);

      .blog-post-list-item-title {
        text-decoration: underline;
      }
    }

    &:focus-visible {
      outline: 2px solid var(--mdf-color-outline-default);
      background-color: var(--mdf-color-background-muted);
    }
  }
}

.social-publication-list {
  display: grid;
  grid-template-columns: 1fr 1fr;
  margin: 1rem 0 2rem 0;
  gap: 1rem;
  width: 100%;

  .social-publication-list-item {
    font-size: 0.8rem;

    .social-publication-list-item-image {
      position: relative;
      display: block;

      img {
        width: 100%;
        min-width: calc((600px - 1rem) / 2);
        height: unset;
        display: block;
        object-fit: cover;
        border-radius: 10px;
        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
        transition: box-shadow 0.3s ease-out;

        --skeleton-color1: var(--mdf-color-background-muted);
        --skeleton-color2: hsl(from var(--mdf-color-background-muted) h s calc(l - 3));

        background: var(--mdf-color-background-muted);
        background: linear-gradient(to right, var(--skeleton-color2) 8%, var(--skeleton-color1) 18%, var(--skeleton-color2) 33%);
        background-size: 1500px 100px;
        animation: wave 2s infinite ease-out;
      }

      .publication-header {
        position: absolute;
        display: flex;
        align-items: center;
        gap: 5px;
        top: 10px;
        left: 10px;
      }

      .publication-more,
      .publication-date,
      .publication-description {
        background-color: rgba(0, 0, 0, 0.6);
        color: white;
        padding: 4px;
        border-radius: 5px;
        height: calc(0.8rem + 8px);
        line-height: 0.8rem;
        transition: background-color 0.2s ease-out;
        display: flex;
        align-items: center;
      }

      .publication-description {
        position: absolute;
        bottom: 10px;
        left: 10px;
        white-space: nowrap;
        opacity: 0;
        max-width: 0;
        transition: max-width 0.2s ease-out, opacity 0.2s ease-out;
        overflow: hidden;
        padding: 0;
      }

      .publication-description span {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        display: block;
        padding: 4px;
      }

      .publication-more {
        display: flex;
        align-items: center;

        .publication-more-text {
          white-space: nowrap;
          opacity: 0;
          max-width: 0;
          transition: max-width 0.2s ease-out, opacity 0.2s ease-out, margin-left 0.3s ease-out;
          margin-left: 0px;
        }
      }

      &:hover,
      &:focus-visible {

        .publication-more,
        .publication-date,
        .publication-description {
          background-color: rgba(0, 0, 0, 0.8);
        }

        img {
          box-shadow: none;
        }

        .publication-more {
          .publication-more-text {
            max-width: 200px;
            opacity: 1;
            margin-left: 5px;
          }
        }

        .publication-description {
          max-width: calc(100% - 20px);
          opacity: 1;
        }
      }

      &:focus-visible {
        outline: 2px solid var(--mdf-color-outline-default);
        outline-offset: 4px;
        border-radius: 8px;
      }
    }
  }

  @media (max-width: 640px) {
    & {
      grid-template-columns: 1fr;
    }
  }

  @media (prefers-reduced-motion: reduce) {
    .social-publication-list-item {
      .social-publication-list-item-image {

        img,
        .publication-description,
        .publication-more>.publication-more-text {
          transition: none;
        }
      }
    }
  }
}

.menu {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 10px;
  justify-content: center;

  .menu-item {
    text-decoration: none;
    color: inherit;

    &.menu-item-current {
      text-decoration: underline;
      text-underline-offset: 3px;
      font-weight: 500;
    }

    &:visited {
      color: inherit;
    }

    &:focus-visible {
      border-radius: 3px;
      outline: 2px solid var(--mdf-color-outline-default);
      outline-offset: 3px;
    }
  }
}

.mdf-link {
  border-radius: 3px;
}

.mdf-badge {
  border-radius: 3px;
}

.mdf-emphasis {
  font-weight: 600;
}

i {
  font-style: italic;
}

.text-no-wrap {
  text-wrap: nowrap;
}

.skip-to-content-link {
  background: var(--mdf-color-background-brand-primary);
  padding: 8px;
  position: absolute;
  transform: translateY(-200%);
  border-radius: 3px;

  &:visited {
    color: inherit;
  }

  &:focus {
    transform: translateY(0%);
    outline: 2px solid var(--mdf-color-outline-default);
    outline-offset: -1px;
  }
}

@view-transition {
  navigation: auto;
}

::view-transition-old(post-title-my-post) {
  animation: fade-out 0.1s ease-out;
}

::view-transition-new(post-title-my-post) {
  animation: fade-in 0.1s ease-out;
}

@keyframes fade-out {
  to {
    opacity: 0;
  }
}

@keyframes fade-in {
  from {
    opacity: 0;
  }
}

@keyframes wave {
  0% {
    background-position: -468px 0;
  }

  100% {
    background-position: 468px 0;
  }
}

